--- a/html/src/css/layouts/_footer.scss
+++ b/html/src/css/layouts/_footer.scss
@@ -10,6 +10,9 @@
         @media (max-width: 1199.98px) {
             flex: 0 0 45px;
         }
+        @media (max-width: 767.98px) {
+            flex: 0 0 28px;
+        }
     }
 
     .point-link, .phone-link, .mail-link{
